--- a/lab-2/pom.xml
+++ b/lab-2/pom.xml
@@ -19,5 +19,18 @@
             <artifactId>sdk</artifactId>
             <version>1.0.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
