--- a/lab-10-event-sourcing-and-cqrs/docker-compose.yml
+++ b/lab-10-event-sourcing-and-cqrs/docker-compose.yml
@@ -14,5 +14,8 @@ services:
       - postgres:/data/postgres
       - ./scripts/ddl.sql:/docker-entrypoint-initdb.d/ddl.sql
 
+  manager-admin:
+    image:
+
 volumes:
   postgres:
